Fixing spacing issues

--- a/src/css/search-bar.css
+++ b/src/css/search-bar.css
@@ -94,7 +94,6 @@ a,a:visited {
 		/* Top/left values mimic padding */
 		top: 6px;
 		left: 6px;
-		width: 45%; 
 		padding-right: 10px; 
 		white-space: nowrap;
 	}
